# storyteller

./: .gitignore  README.md  install  pyproject.toml  storyteller  storyteller.bat
examples/: chat.md  storyteller.toml  storyteller.toml.template
examples/plots/: vampire.md
src/storyteller/: app.py  config.py  fs.py  kobold.py  llamacpp.py  llm.py  parser.py  runner.py  storyteller.toml.template
